# docs/swagger.yaml
@@ -90,6 +90,8 @@ definitions:
         type: string
       created_at:
         type: string
+      created_by:
+        type: string
       id:
         type: string
       reference_id:
@@ -101,6 +103,8 @@ definitions:
       title:
         type: string
       updated_at:
+        type: string
+      updated_by:
         type: string
       user_id:
         type: string
@@ -230,6 +234,8 @@ definitions:
     properties:
       created_at:
         type: string
+      created_by:
+        type: string
       email:
         type: string
       id:
@@ -243,6 +249,8 @@ definitions:
       role_id:
         type: integer
       updated_at:
+        type: string
+      updated_by:
         type: string
       username:
         type: string
