# internal/modules/user/model.go
@@ -8,17 +8,19 @@ import (
 )
 
 type User struct {
-	ID           uuid.UUID `json:"id"`
-	ReferenceID  string    `json:"reference_id"`
-	Email        string    `json:"email"`
-	Username     string    `json:"username"`
-	Password     password  `json:"-"`
-	IsActive     bool      `json:"is_active"`
-	RoleID       int64     `json:"role_id"`
-	Role         Role      `json:"role"`
-	CreatedAt    time.Time `json:"created_at"`
-	UpdatedAt    time.Time `json:"updated_at"`
-	TokenVersion int       `json:"-"`
+	ID           uuid.UUID  `json:"id"`
+	ReferenceID  string     `json:"reference_id"`
+	Email        string     `json:"email"`
+	Username     string     `json:"username"`
+	Password     password   `json:"-"`
+	IsActive     bool       `json:"is_active"`
+	RoleID       int64      `json:"role_id"`
+	Role         Role       `json:"role"`
+	CreatedAt    time.Time  `json:"created_at"`
+	UpdatedAt    time.Time  `json:"updated_at"`
+	CreatedBy    *uuid.UUID `json:"created_by,omitempty"`
+	UpdatedBy    *uuid.UUID `json:"updated_by,omitempty"`
+	TokenVersion int        `json:"-"`
 }
 
 type Role struct {
